syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/ozonva/ova_film_api/pkg/service";

package ova_film_api;

service MovieService {
  rpc createMovie (Movie) returns (google.protobuf.Empty);
  rpc describeMovie (DescribeMovieMessage) returns (Movie);
  rpc removeMovie (RemoveMovieMessage) returns (google.protobuf.Empty);
  rpc listMovies (MovieListRequest) returns (MovieList);
}

message Movie {
  uint64 id = 1;
  uint64 userId = 2;
  string name = 3;
  uint32 year = 4;
}

message DescribeMovieMessage {
  uint64 movieId = 1;
}

message RemoveMovieMessage {
  uint64 movieId = 1;
}

message MovieList {
  repeated Movie movies = 1;
}

message MovieListRequest {
}